--- a/minesweep.html
+++ b/minesweep.html
@@ -17,6 +17,7 @@
 		</div>
 		<div class="container">
 			<div class="row">
+				<div class="span1" data-bind="visible: rows() < 25"></div>
 				<div class="span4">
 					<div  id="divControls" class="form-horizontal controls">
 						<div class="control-group">
@@ -32,18 +33,18 @@
 							</div>
 						</div>
 						<div class="control-group" data-bind="css: {error: tooFewColumns() || tooManyColumns() }">
-							<label class="control-label" for="txtColumns">Number of Columns</label>
+							<label class="control-label" for="txtColumns">Number of Rows</label>
 							<div class="controls">
-								<input id="txtColumns" name="txtColumns" type="number" class="input-small" data-bind="value: columns, attr: {max: maxColumns}" min="1">
-								<span class="help-inline" data-bind="visible: tooFewColumns">You need at least one column.</span>
+								<input id="txtColumns" name="txtColumns" type="number" class="input-small" data-bind="value: columns, attr: {max: maxColumns}" min="2">
+								<span class="help-inline" data-bind="visible: tooFewColumns">You need at least two columns.</span>
 								<span class="help-inline" data-bind="visible: tooManyColumns">You can have no more than <span data-bind="text: maxColumns"></span> columns.</span>
 							</div>
 						</div>
 						<div class="control-group" data-bind="css: {error: tooFewRows() || tooManyRows()}">
-							<label class="control-label" for="txtRows">Number of Rows</label>
+							<label class="control-label" for="txtRows">Number of Columns</label>
 							<div class="controls">
-								<input id="txtRows" name="txtRows" type="number" class="input-small" data-bind="value: rows, attr: {max: maxRows}" min="1">
-								<span class="help-inline" data-bind="visible: tooFewRows">You need at least one row.</span>
+								<input id="txtRows" name="txtRows" type="number" class="input-small" data-bind="value: rows, attr: {max: maxRows}" min="2">
+								<span class="help-inline" data-bind="visible: tooFewRows">You need at least two rows.</span>
 								<span class="help-inline" data-bind="visible: tooManyRows">You can have no more than <span data-bind="text: maxRows"></span> rows.</span>
 							</div>
 						</div>
@@ -61,7 +62,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="span8">
+				<div class="span1"></div>
+				<div class="span5">
 					<div id="divMinesweepBoard" class="center">
 						<table cellpadding="0" cellspacing="0" class="minesweep">
 							<tbody data-bind="foreach: tiles">
@@ -71,14 +73,36 @@
 									    <div class="border"></div>
 									    <!-- /ko -->
 										<!-- ko if: typeof isMine !== 'undefined' -->
-										<div data-bind="visible: !isCovered() && !isTagged(), css: { mine: armed, disarmed: !armed() } , event: {contextmenu: tag}" ></div>
+										<div data-bind="visible: !isCovered() && !isTagged(), 
+														css: { mine: armed, disarmed: !armed() } , 
+														event: {contextmenu: tag},
+														style: {	width: sizeInPixels,
+																	height: sizeInPixels,
+																	backgroundSize: sizeInPixels }"  >
+										</div>
 									    <!-- /ko -->
 										<!-- ko if: typeof isValue !== 'undefined' -->
-										<div class="value" data-bind="visible: isValue, text: value, style: { color: getValueColor }, event: {contextmenu: tag}"></div>
+										<div data-bind="visible: isValue, 
+														text: value, 
+														event: {contextmenu: tag},
+														style: {	color: getValueColor,
+																	fontSize: fontSizeInPixels,
+																	width: sizeInPixels,
+																	height: sizeInPixels }" class="value" ></div>
 									    <!-- /ko -->
 										<!-- ko if: typeof isTagged !== 'undefined' -->
-										<div class="flagged" data-bind="visible: isTagged, click: click, event: {contextmenu: tag}" ></div> 
-										<div class="blank"  data-bind="visible: isBlank, click: click, event: {contextmenu: tag}" ></div>
+										<div data-bind="visible: isTagged, 
+														click: click, 
+														event: {contextmenu: tag},
+														style: {	width: sizeInPixels,
+																	height: sizeInPixels,
+																	backgroundSize: sizeInPixels }" class="flagged" ></div> 
+										<div data-bind="visible: isBlank, 
+														click: click, 
+														event: {contextmenu: tag},
+														style: {	width: sizeInPixels,
+																	height: sizeInPixels,
+																	backgroundSize: sizeInPixels }" class="blank" ></div>
 									    <!-- /ko -->
 									</td>
 								</tr>
@@ -86,6 +110,7 @@
 						</table>
 					</div>
 				</div>
+				<div class="span1"></div>
 			</div> 
 			<!-- <hr> -->
 			<footer id="ftMessages">
@@ -104,22 +129,23 @@
 		<script type="text/javascript" src="lib/define.js"></script>
 		<script type="text/javascript" src="lib/require.js"></script>
 		<script type="text/javascript" src="lib/events.js"></script>
-		<script type="text/javascript" src="lib/Board.js"></script>
+		<script type="text/javascript" src="lib/tileBuilder.js"></script>
 		<script type="text/javascript" src="lib/builder.js"></script>
 		<script type="text/javascript" src="lib/boardBuilder.js"></script>
 		<script type="text/javascript" src="lib/TileViewModel.js"></script>
 		<script type="text/javascript" src="lib/MineViewModel.js"></script>
 		<script type="text/javascript" src="lib/ValueViewModel.js"></script>
-		<script type="text/javascript" src="lib/tileFactory.js"></script>
 		<script type="text/javascript" src="lib/BoardViewModel.js"></script>
 		<script type="text/javascript" src="lib/GameViewModel.js"></script> 
 		<script type="text/javascript">
 			//This could be in its own file but I'm leaving it here so the code reviewers have an easy start -->
-			var board = window.minesweep.boardBuilder(8, 8, 10);
+			var boardBuilder = window.minesweep.boardBuilder;
+			var config = { columns: 8, rows: 8, numMines: 10 };
+			var tiles = boardBuilder(config);
 			var boardVm = new window.minesweep.BoardViewModel();
 
-			boardVm.importTiles(board);
-			var game = new window.minesweep.GameViewModel(board, boardVm, 32, 32);
+			boardVm.importTiles(tiles);
+			var game = new window.minesweep.GameViewModel(config, boardVm, 32, 32);
 
 			ko.applyBindings(boardVm, document.getElementById('divMinesweepBoard'));  
 			ko.applyBindings(game, document.getElementById('divNavBar'));
