--- a/minesweep.html
+++ b/minesweep.html
@@ -12,58 +12,63 @@
 				<div class="container-fluid">
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"></a>
 					<a class="brand" href="#" data-bind="event: {mousedown: cheat, mouseup: uncheat}">Mine Sweeper</a> 
+					<form class="navbar-form pull-left">
+					  <div class="control-group">
+						  <div class="input-prepend controls">
+								<span class="add-on" >Tagged</span>
+								<span class="input-mini uneditable-input" data-bind="text: minesTagged"></span>
+						  </div>
+						 </div>
+					  <div class="control-group">
+						  <div class="input-prepend controls">
+								<span class="add-on" >Tiles Left</span>
+								<span class="input-mini uneditable-input" data-bind="text: tilesLeft"></span> 
+						  </div>
+						 </div>
+					  <div class="control-group" data-bind="css: {error: tooFewColumns() || tooManyColumns() }">
+					  	<div class="input-prepend controls">
+								<span class="add-on" ># Rows</span>
+								<input id="txtColumns" name="txtColumns" type="number" class="input-small" data-bind="value: columns, attr: {max: maxColumns}" min="2">
+							</div>
+					  </div>
+						<div class="control-group" data-bind="css: {error: tooFewRows() || tooManyRows()}">
+						  <div class="input-prepend controls">
+								<span class="add-on" ># Columns</span>
+								<input id="txtRows" name="txtRows" type="number" class="input-small" data-bind="value: rows, attr: {max: maxRows}" min="2">
+							</div>
+						</div>
+						<div class="control-group" data-bind="css: {error: tooManyMines() || tooFewMines()}">
+							<div class="input-prepend controls">
+								<span class="add-on"># Mines</span>
+								<input id="txtBombs" name="txtBombs" type="number" class="input-small" data-bind="value: numMines, attr: {max: maxMines}" min="1">
+							</div>
+						</div>
+						<div class="control-group">
+							<button class="btn" data-bind="click: resetBoard, enabled: gameIsValid, css: {'btn-primary': gameIsValid, disabled: !gameIsValid()}">New Game</button> 
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="span1" data-bind="visible: rows() < 25"></div>
-				<div class="span4">
-					<div  id="divControls" class="form-horizontal controls">
-						<div class="control-group">
-							<label class="control-label" >Mines Tagged</label>
-							<div class="controls">
-								<span class="input-mini uneditable-input" data-bind="text: minesTagged"></span>
-							</div>
+				<div id="divFormValidation" class="span12">
+						<div class="alert alert-error" data-bind="visible: tooFewColumns() || tooManyColumns() ">
+							<span data-bind="visible: tooFewColumns">You need at least two rows.</span>
+							<span data-bind="visible: tooManyColumns">You can have no more than <span data-bind="text: maxColumns"></span> rows.</span>
 						</div>
-						<div class="control-group">
-							<label class="control-label" >Tiles Left</label>
-							<div class="controls">
-								<span class="input-mini uneditable-input" data-bind="text: tilesLeft"></span> 
-							</div>
+						<div class="alert alert-error" data-bind="visible: tooFewRows() || tooManyRows()">
+							<span data-bind="visible: tooFewRows">You need at least two columns.</span>
+							<span data-bind="visible: tooManyRows">You can have no more than <span data-bind="text: maxRows"></span> columns.</span>
 						</div>
-						<div class="control-group" data-bind="css: {error: tooFewColumns() || tooManyColumns() }">
-							<label class="control-label" for="txtColumns">Number of Rows</label>
-							<div class="controls">
-								<input id="txtColumns" name="txtColumns" type="number" class="input-small" data-bind="value: columns, attr: {max: maxColumns}" min="2">
-								<span class="help-inline" data-bind="visible: tooFewColumns">You need at least two columns.</span>
-								<span class="help-inline" data-bind="visible: tooManyColumns">You can have no more than <span data-bind="text: maxColumns"></span> columns.</span>
-							</div>
+						<div class="alert alert-error" data-bind="visible: tooManyMines() || tooFewMines()">
+							<span data-bind="visible: tooManyMines">You have more mines than tiles.</span>
+							<span data-bind="visible: tooFewMines">You need at least one mine.</span>
 						</div>
-						<div class="control-group" data-bind="css: {error: tooFewRows() || tooManyRows()}">
-							<label class="control-label" for="txtRows">Number of Columns</label>
-							<div class="controls">
-								<input id="txtRows" name="txtRows" type="number" class="input-small" data-bind="value: rows, attr: {max: maxRows}" min="2">
-								<span class="help-inline" data-bind="visible: tooFewRows">You need at least two rows.</span>
-								<span class="help-inline" data-bind="visible: tooManyRows">You can have no more than <span data-bind="text: maxRows"></span> rows.</span>
-							</div>
-						</div>
-						<div class="control-group" data-bind="css: {error: tooManyMines() || tooFewMines()}">
-							<label class="control-label" for="txtBombs">Number of Mines</label>
-							<div class="controls">
-								<input id="txtBombs" name="txtBombs" type="number" class="input-small" data-bind="value: numMines, attr: {max: maxMines}" min="1">
-								<span class="help-inline" data-bind="visible: tooManyMines">You have more mines than tiles.</span>
-								<span class="help-inline" data-bind="visible: tooFewMines">You need at least one mine.</span>
-							</div>
-						</div>
-						<div class="control-group center"> 
-							<button class="btn" data-bind="click: resetBoard, enabled: gameIsValid, css: {'btn-primary': gameIsValid, disabled: !gameIsValid()}">New Game</button> 
-							<button class="btn" data-bind="click: validateGame, enabled: canValidate, css: {disabled: !canValidate(), 'btn-warning': canValidate }">Validate</button>
-						</div>
-					</div>
 				</div>
-				<div class="span1"></div>
-				<div class="span5">
+			</div>
+			<div class="row"> 
+				<div class="span12">
 					<div id="divMinesweepBoard" class="center">
 						<table cellpadding="0" cellspacing="0" class="minesweep">
 							<tbody data-bind="foreach: tiles">
@@ -110,10 +115,18 @@
 						</table>
 					</div>
 				</div>
-				<div class="span1"></div>
 			</div> 
+			<div id="divControls" class="row" data-bind="if: !success() && !failure()">
+				<div class="span12">
+					<div class="form-horizontal controls">
+						<div class="control-group center"> 
+							<button class="btn" data-bind="click: validateGame, enabled: canValidate, css: {disabled: !canValidate(), 'btn-warning': canValidate }">Validate</button>
+						</div>
+					</div>
+				</div>
+			</div>	
 			<!-- <hr> -->
-			<footer id="ftMessages">
+			<div data-bind="if: success() || failure()" id="ftMessages">
 				<div class="alert alert-error" data-bind="visible: failure">
 					You did not do so well this time. Maybe next time. 
 					<button class="btn" data-bind="click: resetBoard, enabled: gameIsValid, css: {'btn-danger': gameIsValid, disabled: !gameIsValid()}">New Game</button>  
@@ -122,7 +135,7 @@
 					Congratulations! You won! 
 					<button class="btn" data-bind="click: resetBoard, enabled: gameIsValid, css: {'btn-success': gameIsValid, disabled: !gameIsValid()}">New Game</button>   
 				</div>
-			</footer>
+			</div>
 		</div>
 		<script type="text/javascript" src="public/js/knockout-2.1.0.js"></script>
 		<script type="text/javascript" src="public/js/amplify.core.min.js"></script>
@@ -148,6 +161,7 @@
 
 			ko.applyBindings(boardVm, document.getElementById('divMinesweepBoard'));  
 			ko.applyBindings(game, document.getElementById('divNavBar'));
+			ko.applyBindings(game, document.getElementById('divFormValidation'));
 			ko.applyBindings(game, document.getElementById('divControls'));  
 			ko.applyBindings(game, document.getElementById('ftMessages'));  
 		</script>
