changed case in Linux so they will actually be sent (unlike in Windows Bash).

--- a/minesweep.html
+++ b/minesweep.html
@@ -143,13 +143,13 @@
 		<script type="text/javascript" src="lib/require.js"></script>
 		<script type="text/javascript" src="lib/events.js"></script>
 		<script type="text/javascript" src="lib/builder.js"></script>
-		<script type="text/javascript" src="lib/TileViewModel.js"></script>
-		<script type="text/javascript" src="lib/MineViewModel.js"></script>
-		<script type="text/javascript" src="lib/ValueViewModel.js"></script>
+		<script type="text/javascript" src="lib/tileViewModel.js"></script>
+		<script type="text/javascript" src="lib/mineViewModel.js"></script>
+		<script type="text/javascript" src="lib/valueViewModel.js"></script>
 		<script type="text/javascript" src="lib/tileBuilder.js"></script>
 		<script type="text/javascript" src="lib/boardBuilder.js"></script>
-		<script type="text/javascript" src="lib/BoardViewModel.js"></script>
-		<script type="text/javascript" src="lib/GameViewModel.js"></script> 
+		<script type="text/javascript" src="lib/boardViewModel.js"></script>
+		<script type="text/javascript" src="lib/gameViewModel.js"></script> 
 		<script type="text/javascript">
 			//This could be in its own file but I'm leaving it here so the code reviewers have an easy start -->
 			var boardBuilder = window.minesweep.boardBuilder;
