--- a/minesweep.html
+++ b/minesweep.html
@@ -142,17 +142,17 @@
 		<script type="text/javascript" src="lib/define.js"></script>
 		<script type="text/javascript" src="lib/require.js"></script>
 		<script type="text/javascript" src="lib/events.js"></script>
-		<script type="text/javascript" src="lib/builder.js"></script>
+		<script type="text/javascript" src="lib/boardBuilder.js"></script>
 		<script type="text/javascript" src="lib/tileViewModel.js"></script>
 		<script type="text/javascript" src="lib/mineViewModel.js"></script>
 		<script type="text/javascript" src="lib/valueViewModel.js"></script>
-		<script type="text/javascript" src="lib/tileBuilder.js"></script>
-		<script type="text/javascript" src="lib/boardBuilder.js"></script>
+		<script type="text/javascript" src="lib/tileFactory.js"></script>
+		<script type="text/javascript" src="lib/boardFactory.js"></script>
 		<script type="text/javascript" src="lib/boardViewModel.js"></script>
 		<script type="text/javascript" src="lib/gameViewModel.js"></script> 
 		<script type="text/javascript">
 			//This could be in its own file but I'm leaving it here so the code reviewers have an easy start -->
-			var boardBuilder = window.minesweep.boardBuilder;
+			var boardFactory = window.minesweep.boardFactory;
 			var config = { columns: 8, rows: 8, numMines: 10 }; 
 			var boardVm = new window.minesweep.boardViewModel();
 
