Finally figured out a way to implement module.exports in the browser. Not cross browser, and a bit hacky, but it does work in Chrome. Woohoo.

--- a/minesweep.html
+++ b/minesweep.html
@@ -141,6 +141,7 @@
 		<script type="text/javascript" src="public/js/amplify.core.min.js"></script>
 		<script type="text/javascript" src="lib/define.js"></script>
 		<script type="text/javascript" src="lib/require.js"></script>
+		<script type="text/javascript" src="lib/module.js"></script>
 		<script type="text/javascript" src="lib/events.js"></script>
 		<script type="text/javascript" src="lib/boardBuilder.js"></script>
 		<script type="text/javascript" src="lib/tileViewModel.js"></script>
